--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
     background-color: #0F2617;
 }
 
-.game-board div {
+.field {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,6 +66,7 @@ body {
     width: 100%;
     height: 100%;
     place-self: center;
+    cursor: pointer;
 }
 
 /*footer*/
