--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     --dark-font-color: #424242;
     --light-font-color: rgb(241, 241, 241);
     --header-bg-color: #233840;
+    --main-bg-color: #0F2617; 
     --footer-bg-color: #517d8f;
 }
 
@@ -48,19 +49,30 @@ body {
     margin-left: 1rem;
 }
 
-/*game board*/
+/*main*/
+
+.round-label {
+    box-sizing: border-box;
+    height: 10vh;
+    background-color: var(--main-bg-color);
+    color: var(--light-font-color);
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    padding: 1rem;
+}
 
 .game-board {
     display: grid;
     width: 100vW;
-    height: 85vh;
+    height: 75vh;
     grid-template-columns: repeat(3, 10rem);
     grid-template-rows: repeat(3, 10rem);
     justify-content: center;
     align-content: center;
     padding: auto;
     gap: 1rem;
-    background-color: #0F2617;
+    background-color: var(--main-bg-color);
 }
 
 .field {
@@ -87,7 +99,6 @@ body {
     bottom: 0;
     right: 0;
     width: 100%;
-    height: 5vh;
 }
 
 .github-link {
