--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ body {
     padding: 0 1.5rem;
     cursor: pointer;
     background-color: #8C8C8C;
-    color: #424242;
+    color: azure;
     font-weight: 500;
     transition: .5s;
 }
