--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,10 @@ body {
 
 /*name form*/
 .name-form {
+    height: 50vh;
     padding: 1rem;
     display: grid;
+    place-content: center;
     gap: 1rem;
     position: absolute;
     top: 10vh;
@@ -71,9 +73,10 @@ body {
 
 .input-container {
     place-self: center;
-    display: flex;
-    width: 40%;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 50%;
+    justify-content: center;
 }
 
 input[type=text] {
@@ -87,11 +90,27 @@ input[type=text]:active {
     border: 1px solid #424242
 }
 
+.player1-input{
+    grid-column: 1 / 3;
+}
+
 .player1-input,
 .player2-input {
     display: flex;
     flex-direction: column;
     font-size: 1.2rem;
+    margin-left: 1rem;
+}
+
+.ai-dropdown {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-left: 1rem;
+}
+
+#ai {
+    height: 1.8rem;
 }
 
 .start {
